--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -8,31 +8,105 @@
 
 \chapter{Intro}
 
-\begin{definition}[Proper Probability Kernel]
-    \label{def:properProbabilityKernel}
+\begin{definition}[Cylinder Events]
+    \label{def:cylinderEventsIn}
     \lean{ProbabilityTheory.cdf}
     \leanok
-    Let $(X,\mathcal{X})$ and $(Y,\mathcal{Y})$ be measure spaces. Let $\pi:\mathcal{X}\times Y\to\overline{\mathbb{R}}$ be such that
-    \begin{enumerate}
-        \item $\pi(\cdot\mid y)$ is a measure on $(X,\mathcal{X})$ for all $y\in \mathcal{Y}$,
-        \item $\pi(A\mid\cdot)$ is $\mathcal{Y}$-measurable for each $A\in\mathcal{X}$, and
-        \item $\pi(X\mid\cdot)=1$
-    \end{enumerate}
+    Let $(E,\mathcal{E})$ be a measurable space, let $S$ be a set, and let $\Delta\subseteq S$. We define the \textbf{cylinder events in }$\Delta$ to be $\mathcal{F}_\Delta:=\sigma(\{\pi_\delta:E^S\to E\mid \delta\in \Delta\})$, where each $\pi_\delta$ is precisely the canonical projection map.
+\end{definition}
+
+\begin{definition}[Probability Kernel]
+    \label{def:probabilityKernel}
+    \lean{ProbabilityTheory.cdf}
+    \leanok
+    Let $(X,\mathcal{X})$ and $(Y,\mathcal{Y})$ be measurable spaces. Then,
+    \begin{equation*}
+        \text{ProbKer}(\mathcal{Y},\mathcal{X}):=\left\{\pi:\mathcal{X}\times Y\to\overline{\mathbb{R}_{\geq0}}\mid \forall y\in Y~\pi(\cdot\mid y)\in\mathfrak{M}(X,\mathcal{X}),\forall A\in\mathcal{X}~\pi(A,\cdot)\text{ is }\mathcal{Y}-\text{measurable},\pi(X,\cdot)=1\right\}
+    \end{equation*}
+    defines the set of \textbf{probability kernels from $\mathcal{Y}$ to $\mathcal{X}$}.
 \end{definition}
 
 \begin{definition}[Specification]
     \label{def:specification}
     \lean{ProbabilityTheory.cdf}
     \leanok
-    \uses{def:properProbabilityKernel}
-    
+    \uses{def:cylinderEventsIn, def:probabilityKernel}
+    Let $(E,\mathcal{E})$ be a measurable space, and let $S$ be a set. Then,
+    \begin{equation*}
+        \Gamma(\mathcal{E},S):=\left\{\gamma\in\prod_{\Lambda\in\text{Finset}(S)}\text{ProbKer}(\mathcal{F}_\Lambda,\mathcal{E}^S)\mid \forall \Lambda,\Delta\in\text{Finset}(S)~\Lambda\subseteq\Delta\implies\gamma_\Lambda\circ_k\gamma_\Delta=\gamma_\Delta\right\}
+    \end{equation*}
+    defines the set of \textbf{specifications on $E^S$}, i.e. it is the set of indexed collections of probability kernels that satisfy a consistency criterion.
 \end{definition}
 
-\begin{lemma}
+\begin{definition}[Gibbs Measures]
+    \label{def:gibbsMeasures}
+    \lean{ProbabilityTheory.cdf}
+    
+    \uses{def:specification}
+    Let $(E,\mathcal{E})$ be a measurable space, let $S$ be a set, and let $\Gamma$ be the collection of specifications with parameter set $S$ and state space $(E,\mathcal{E})$. Then,
+    \begin{align*}
+        \mathcal{G}:\Gamma&\to\mathcal{P}(\mathfrak{P}(E^S,\mathcal{F}_S))\\
+        \gamma&\mapsto\left\{\mu\in\mathfrak{P}(E^S,\mathcal{F}_S):\mu(A\mid\mathcal{F}_{S\setminus\Lambda})=\gamma_\Lambda(A\mid\cdot)~\mu\text{-a.s. for each } A\in\mathcal{F}_S\text{ and }\Lambda\in\text{Finset}(S)\right\}
+    \end{align*}
+    defines the set of \textbf{Gibbs measures specified by $\gamma$} (at each $\gamma\in\Gamma$), where $\mathfrak{P}(E^S,\mathcal{F}_S)$ is the space of probability measures, i.e. random fields.
+    
+    %Let $\gamma$ be a specification. Then,
+    %\begin{equation*}
+    %    \mathcal{G}(\gamma):=\left\{\mu\in\mathfrak{P}(E^S,\mathcal{F}_S):\mu(A\mid\mathcal{F}_{S\setminus\Lambda})=\gamma_\Lambda(A\mid\cdot)~\mu\text{-a.s. for each } A\in\mathcal{F}_S\text{ and finite }\Lambda\subseteq S\right\}
+    %\end{equation*}
+    %is defined to be the set of \textbf{Gibbs measures specified by $\gamma$}, where $\mathfrak{P}(E^S,\mathcal{F}_S)$ is the space of probability measures. 
+\end{definition}
 
+\begin{lemma}[Characterization of Gibbs Measures]
+    \label{lem:charGibbsMeasures}
+    \lean{ProbabilityTheory.cdf}
+    
+    \uses{def:gibbsMeasures}
+    \leanok
+    Let $(E,\mathcal{E})$ be a measurable space, and let $S$ be a set. Let $\gamma$ be a specification with parameter set $S$ and state space $(E,\mathcal{E})$, and let $\mu\in\mathfrak{P}(E^S,\mathcal{F}_S)$. TFAE:
+    \begin{enumerate}
+        \item $\mu\in\mathcal{G}(\gamma)$.
+        \item $\mu\circ_k\gamma_\Lambda=\mu$ for all $\Lambda\in\text{Finset}(S)$.
+        \item There is a cofinal subset $\mathcal{S}\subseteq\text{Finset}(S)$ such that $\mu\circ_k\gamma_\Lambda=\mu$ for all $\Lambda\in\mathcal{S}$.
+    \end{enumerate}
 \end{lemma}
 
-\begin{definition}[]
+\begin{definition}[Product Probability Measure]
+    \label{def:productProbabilityMeasure}
+    \lean{ProbabilityTheory.cdf}
 
-
+    characteristic predicate?
 \end{definition}
+
+\begin{definition}[Independent Specification with Single Spin Distribution [ISSSD]]
+    \label{def:ISSSD}
+    \lean{ProbabilityTheory.cdf}
+    
+    Let $(E,\mathcal{E})$ be a measurable space, and let $S$ be a set. Then,
+    \begin{align*}
+        \text{ISSSD}:\mathfrak{P}(E,\mathcal{E})&\to\left(\text{Finset}(S)\to\left(\mathcal{F}_S\times E^S\to\overline{\mathbb{R}}\right)\right)\\
+        \mu&\mapsto\left(\Lambda\mapsto\left((A\mid\omega)\mapsto(\mu^\Lambda\times\delta_{\omega_{S\setminus\Lambda}})(A)\right)\right)
+    \end{align*}
+    change this
+    defines the \textbf{Independent Specification with Single Spin Distribution with $\mu$} (at each $\mu\in\mathfrak{P}(E,\mathcal{E})$), where $\mu^\Lambda$ is the usual product measure, and $\delta$ is the usual Dirac measure. Then, $\text{ISSSD}(\lambda)$ 
+\end{definition}
+
+\begin{lemma}[ISSSDs are Specifications]
+    \label{lem:ISSSDSpecification}
+    \lean{ProbabilityTheory.cdf}
+    \uses{def:ISSSD, def:specification}
+    The image of $\text{ISSSD}$ is always a collection of specifications.
+\end{lemma}
+
+\begin{lemma}[Basic Properties of ISSSDs]
+    \label{lem:basicPropISSSD}
+    \lean{ProbabilityTheory.cdf}
+    \uses{lem:ISSSDSpecification}
+    split this
+    Let $(E,\mathcal{E})$ be a measurable space, and let $S$ be a set. Then, $\text{ISSSD}(\mu)$ satisfies
+    \begin{enumerate}
+        \item $\text{ISSSD}(\mu)_\Delta\circ_k\text{ISSSD}(\mu)_\Lambda=\text{ISSSD}(\mu)_{\Delta\cup\Lambda}$ for all $\Delta,\Lambda\in\text{Finset}(S)$, and
+        \item $\mathcal{G}(\text{ISSSD}(\mu))=\{\mu^S\}$
+    \end{enumerate}
+    for all $\mu\in\mathfrak{P}(E,\mathcal{E})$.
+\end{lemma}
