--- a/blueprint/src/web.tex
+++ b/blueprint/src/web.tex
@@ -14,11 +14,11 @@
 \input{macros/common}
 \input{macros/web}
 
-\home{https://james18lpc.github.io/Summer2024}
-\github{https://github.com/james18lpc/Summer2024}
-\dochome{https://james18lpc.github.io/Summer2024/docs}
+\home{https://james18lpc.github.io/GibbsMeasure}
+\github{https://github.com/james18lpc/GibbsMeasure}
+\dochome{https://james18lpc.github.io/GibbsMeasure/docs}
 
-\title{Summer2024}
+\title{GibbsMeasure}
 \author{james18lpc}
 
 \begin{document}
