--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -10,7 +10,7 @@
 
 \begin{definition}[Cylinder Events]
     \label{def:cylinder-event}
-    \lean{cylinder-event}
+    \lean{cylinderEvents}
     \leanok
     Let $(E,\mathcal{E})$ be a measurable space, and let $S$ be a set. Then,
     \begin{align*}
