--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -1,120 +1,6 @@
 % In this file you should put the actual content of the blueprint.
 % It will be used both by the web and the print version.
 % It should *not* include the \begin{document}
-%
-% If you want to split the blueprint content into several files then
-% the current file can be a simple sequence of \input. Otherwise It
-% can start with a \section or \chapter for instance.
 
-\chapter{Intro}
-
-\begin{definition}[Cylinder Events]
-    \label{def:cylinder-event}
-    \lean{cylinderEvents}
-    \leanok
-    Let $(E,\mathcal{E})$ be a measurable space, and let $S$ be a set. Then,
-    \begin{align*}
-        \mathcal{F}:\mathcal{P}(S)&\to\mathcal{P}(E)\\
-        \Delta&\mapsto \sigma(\{\text{proj}_\delta:E^S\to E\mid \delta\in \Delta\})
-    \end{align*}
-    defines the \textbf{cylinder events in }$\Delta$ (for each $\Delta\in\mathcal{P}(S)$), where each $\text{proj}_\delta$ is precisely the canonical projection map.
-\end{definition}
-
-\begin{definition}[Probability Kernel]
-    \label{def:kernel}
-    \lean{ProbabilityTheory.kernel}
-    \leanok
-    Let $(X,\mathcal{X})$ and $(Y,\mathcal{Y})$ be measurable spaces. Then,
-    \begin{equation*}
-        \text{ProbKer}_{\mathcal{Y},\mathcal{X}}:=\left\{\pi:\mathcal{X}\times Y\to\overline{\mathbb{R}_{\geq0}}~\middle\vert~ \forall y\in Y,\pi(\cdot\mid y)\in\mathfrak{P}(X,\mathcal{X});~\forall A\in\mathcal{X},\pi(A\mid\cdot)\text{ is }\mathcal{Y}\text{-measurable}\right\}
-    \end{equation*}
-    defines the set of \textbf{probability kernels from $\mathcal{Y}$ to $\mathcal{X}$}, where $\mathfrak{P}(X,\mathcal{X})$ is the space of probability measures on $X$.
-\end{definition}
-
-\begin{definition}[Specification]
-    \label{def:specification}
-    \lean{Specification}
-    \leanok
-    \uses{def:cylinder-event, def:kernel}
-    Let $(E,\mathcal{E})$ be a measurable space, and let $S$ be a set. Then,
-    \begin{equation*}
-        \Gamma_{\mathcal{E},S}:=\left\{\gamma\in\prod_{\Lambda\in\text{Finset}(S)}\text{ProbKer}_{\mathcal{F}_{S\setminus\Lambda},\mathcal{E}^S}~\middle\vert~ \forall \Lambda,\Delta\in\text{Finset}(S),\Lambda\subseteq\Delta\implies\gamma_\Lambda\circ_k\gamma_\Delta=\gamma_\Delta\right\}
-    \end{equation*}
-    defines the set of \textbf{specifications with parameter set $S$ and state space $(E,\mathcal{E})$}, i.e. it is the set of indexed collections of probability kernels that satisfy a consistency criterion.
-\end{definition}
-
-\begin{definition}[Gibbs Measures]
-    \label{def:gibbs-measure}
-    \lean{GibbsMeasure}
-
-    \uses{def:specification}
-    Let $(E,\mathcal{E})$ be a measurable space, and let $S$ be a set. Then,
-    \begin{align*}
-        \mathcal{G}:\Gamma_{\mathcal{E},S}&\to\mathcal{P}(\mathfrak{P}(E^S,\mathcal{E}^S))\\
-        \gamma&\mapsto\left\{\mu\in\mathfrak{P}(E^S,\mathcal{E}^S)~\middle\vert~\mu(A\mid\mathcal{F}_{S\setminus\Lambda})=\gamma_\Lambda(A\mid\cdot)~\mu\text{-a.s. for each } A\in\mathcal{F}_S\text{ and }\Lambda\in\text{Finset}(S)\right\}
-    \end{align*}
-    defines the set of \textbf{Gibbs measures specified by $\gamma$} (for each $\gamma\in\Gamma_{\mathcal{E},S}$).
-\end{definition}
-
-\begin{lemma}[Characterization of Gibbs Measures]
-    \label{lem:gibbs-measure-char}
-
-    \uses{def:gibbs-measure}
-    Let $(E,\mathcal{E})$ be a measurable space, and let $S$ be a set. Let $\gamma$ be a \textbf{proper} specification with parameter set $S$ and state space $(E,\mathcal{E})$, and let $\mu\in\mathfrak{P}(E^S,\mathcal{F}_S)$. TFAE:
-    \begin{enumerate}
-        \item $\mu\in\mathcal{G}(\gamma)$.
-        \item $\gamma_\Lambda\circ_k\mu=\mu$ for all $\Lambda\in\text{Finset}(S)$.
-        \item There is a cofinal subset $\mathcal{S}\subseteq\text{Finset}(S)$ such that $\gamma_\Lambda\circ_k\mu=\mu$ for all $\Lambda\in\mathcal{S}$.
-    \end{enumerate}
-\end{lemma}
-
-%\begin{definition}[Product Probability Measure]
-%    \label{def:productProbabilityMeasure}
-%    \lean{ProbabilityTheory.cdf}
-%    characteristic predicate?
-%\end{definition}
-
-\begin{definition}[Superposition]
-    \label{def:superposition}
-    \lean{extend}
-    \leanok
-    Let $E$ and $S$ be sets. Let $\Delta\in\mathcal{P}(S)$, and let $\omega\in E^S$. We define
-    \begin{align*}
-        \text{super}_\omega:E^\Delta&\to E^S\\
-        \zeta&\mapsto \delta\mapsto\begin{cases}
-            \zeta_\delta & \delta\in\Delta\\
-            \omega_\delta & \delta\notin\Delta
-        \end{cases}
-    \end{align*}
-    to be the \textbf{superposition of $\zeta$ on $\omega$} (for each $\zeta\in E^\Delta$).
-\end{definition}
-
-\begin{definition}[Independent Specification with Single Spin Distribution [ISSSD]]
-    \label{def:ISSSD}
-    \lean{isssd}
-    \uses{def:superposition}
-    Let $(E,\mathcal{E})$ be a measurable space, and let $S$ be a set. Then,
-    \begin{align*}
-        \text{ISSSD}:\mathfrak{P}(E,\mathcal{E})&\to\text{Finset}(S)\to\mathcal{E}^S\times E^S\to\overline{\mathbb{R}_{\geq0}}\\
-        \nu&\mapsto\Lambda\mapsto(A\mid\omega)\mapsto\left(\nu^\Lambda\left(\text{super}_\omega^{-1}(A)\right)\right)
-    \end{align*}
-    defines the \textbf{Independent Specification with Single Spin Distribution with $\nu$} (for each $\nu\in\mathfrak{P}(E,\mathcal{E})$), where $\nu^\Lambda$ is the usual product measure.
-\end{definition}
-
-\begin{lemma}[ISSSDs are Specifications]
-    \label{lem:isssd-specification}
-        \uses{def:ISSSD, def:specification}
-    The image of $\text{ISSSD}$ is always a collection of specifications.
-\end{lemma}
-
-\begin{lemma}[Strong Consistency of ISSSDs]
-    \label{lem:isssd-strong-consistency}
-        \uses{lem:isssd-specification}
-    Let $(E,\mathcal{E})$ be a measurable space, and let $S$ be a set. Then, $\text{ISSSD}$ satisfies $\text{ISSSD}(\mu)_\Delta\circ_k\text{ISSSD}(\mu)_\Lambda=\text{ISSSD}(\mu)_{\Delta\cup\Lambda}$ for all $\Delta,\Lambda\in\text{Finset}(S)$ and $\mu\in\mathfrak{P}(E,\mathcal{E})$.
-\end{lemma}
-
-\begin{lemma}[Existence of Gibbs Measures Specified by ISSSDs]
-    \label{lem:gibbs-measure-existence}
-        \uses{def:gibbs-measure, lem:isssd-specification}
-    Let $(E,\mathcal{E})$ be a measurable space, and let $S$ be a set. Then, $\mathcal{G}(\text{ISSSD}(\mu))=\{\mu^S\}$.
-\end{lemma}
+\input{chapter/0-prereqs}
+\input{chapter/1-intro}
