--- a/blueprint/src/macros/common.tex
+++ b/blueprint/src/macros/common.tex
@@ -1,3 +1,7 @@
 % In this file you should put all LaTeX macros to be used
 % both by the pdf version and the web version.
 % This should be most of your macros.
+
+\DeclareMathOperator{\Finset}{Finset}
+\DeclareMathOperator{\ISSSD}{ISSSD}
+\DeclareMathOperator{\Ker}{Ker}
