Modification of a specification

--- a/blueprint/src/macros/common.tex
+++ b/blueprint/src/macros/common.tex
@@ -5,3 +5,6 @@
 \DeclareMathOperator{\Finset}{Finset}
 \DeclareMathOperator{\ISSSD}{ISSSD}
 \DeclareMathOperator{\Ker}{Ker}
+
+\newcommand{\union}{\cup}
+\newcommand{\inter}{\cap}
