--- a/blueprint/src/macros/common.tex
+++ b/blueprint/src/macros/common.tex
@@ -2,6 +2,8 @@
 % both by the pdf version and the web version.
 % This should be most of your macros.
 
+\newcommand{\R}{\mathbb R}
+
 \DeclareMathOperator{\Finset}{Finset}
 \DeclareMathOperator{\ISSSD}{ISSSD}
 \DeclareMathOperator{\Ker}{Ker}
