Small changes in the blueprint and docstrings.

--- a/blueprint/src/macros/common.tex
+++ b/blueprint/src/macros/common.tex
@@ -7,6 +7,9 @@
 \DeclareMathOperator{\Finset}{Finset}
 \DeclareMathOperator{\ISSSD}{ISSSD}
 \DeclareMathOperator{\Ker}{Ker}
+\DeclareMathOperator{\juxtOper}{Juxt}
+\newcommand{\juxtBy}[1]{\juxtOper_{#1}}
+\newcommand{\set}[1]{\left\{ #1 \right\}}
 
 \newcommand{\union}{\cup}
 \newcommand{\inter}{\cap}
