--- a/blueprint/src/macros/common.tex
+++ b/blueprint/src/macros/common.tex
@@ -13,3 +13,9 @@
 
 \newcommand{\union}{\cup}
 \newcommand{\inter}{\cap}
+
+\theoremstyle{definition}
+\newtheorem{theorem}{Theorem}[chapter]
+\newtheorem{definition}[theorem]{Definition}
+\newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{proposition}[theorem]{Proposition}
