Start chapter 2 in the blueprint

--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -3,4 +3,5 @@
 % It should *not* include the \begin{document}
 
 \input{chapter/0-prereqs}
-\input{chapter/1-intro}
+\input{chapter/1-specifications-random-fields}
+\input{chapter/2-gibbsian-specifications}
