Update blueprint authors

--- a/blueprint/src/print.tex
+++ b/blueprint/src/print.tex
@@ -24,8 +24,8 @@
 \input{macros/common}
 \input{macros/print}
 
-\title{GibbsMeasure}
-\author{james18lpc}
+\title{Gibbs Measures and Phase Transitions}
+\author{Yaël Dillies, Kalle Kytölä, Kin Yau James Wong, following Hans-Otto Georgii}
 
 \begin{document}
 \maketitle
