--- a/blueprint/src/web.tex
+++ b/blueprint/src/web.tex
@@ -18,8 +18,8 @@
 \github{https://github.com/james18lpc/GibbsMeasure}
 \dochome{https://james18lpc.github.io/GibbsMeasure/docs}
 
-\title{GibbsMeasure}
-\author{james18lpc}
+\title{Gibbs Measures and Phase Transitions}
+\author{Yaël Dillies, Kalle Kytölä, Kin Yau James Wong, following Hans-Otto Georgii}
 
 \begin{document}
 \maketitle
