Make the blueprint follow the structure of the book

--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -2,6 +2,9 @@
 % It will be used both by the web and the print version.
 % It should *not* include the \begin{document}
 
-\input{chapter/0-prereqs}
-\input{chapter/1-specifications-random-fields}
-\input{chapter/2-gibbsian-specifications}
+\chapter{Specifications of random fields}
+
+\input{chapter/1-specifications-random-fields/1-1-preliminaries}
+\input{chapter/1-specifications-random-fields/1-2-prescribing-conditional-probabilities}
+\input{chapter/1-specifications-random-fields/1-3-lambda-specifications}
+\input{chapter/2-gibbsian-specifications/2-1-potentials}
