Add Lebesgue conditional expectation to the blueprint

--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -2,6 +2,10 @@
 % It will be used both by the web and the print version.
 % It should *not* include the \begin{document}
 
+\chapter{Prerequisites}
+
+\input{chapter/0-prereqs/0-1-lebesgue-conditional-expectation}
+
 \chapter{Specifications of random fields}
 
 \input{chapter/1-specifications-random-fields/1-1-preliminaries}
