--- a/blueprint/src/macros/common.tex
+++ b/blueprint/src/macros/common.tex
@@ -3,6 +3,8 @@
 % This should be most of your macros.
 
 \newcommand{\R}{\mathbb R}
+\newcommand{\MCB}{\mathcal B}
+\newcommand{\MCX}{\mathcal X}
 
 \DeclareMathOperator{\Finset}{Finset}
 \DeclareMathOperator{\ISSSD}{ISSSD}
