Separate chapter 2 in the blueprint

--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -11,4 +11,7 @@
 \input{chapter/1-specifications-random-fields/1-1-preliminaries}
 \input{chapter/1-specifications-random-fields/1-2-prescribing-conditional-probabilities}
 \input{chapter/1-specifications-random-fields/1-3-lambda-specifications}
+
+\chapter{Gibbsian specifications}
+
 \input{chapter/2-gibbsian-specifications/2-1-potentials}
